# general-mcmc

./: Cargo.toml  NOTICE  README.md  deny.toml
.github/workflows/: publish.yml
examples/: gauss_mh.rs  minimal_hmc.rs  minimal_mh.rs  minimal_nuts.rs  mixture_gibbs.rs  poisson_mh.rs  rosenbrock3d_hmc.rs  rosenbrock_mh.rs
src/: batched_hmc.rs  core.rs  dev_tools.rs  distributions.rs  euclidean.rs  generic_hmc.rs  generic_nuts.rs  gibbs.rs  hmc.rs  lib.rs  metropolis_hastings.rs  nuts.rs  stats.rs
src/io/: arrow.rs  csv.rs  mod.rs  parquet.rs
tests/: metrohast_2d_gaussian_test.rs  metrohast_poisson_test.rs
